--- a/assets/src/css/components/_author-card.scss
+++ b/assets/src/css/components/_author-card.scss
@@ -1,5 +1,16 @@
 // Author Card Component
 
+// NOTES:
+
+// There are a lot of somewhat isolated pixel values here.
+// Ideally, these would be part of a sizing units scale determined with
+// the designers and included in the variables file. I did that with a
+// couple of the values for this test.
+
+// I would also consolidate the media queries into variables such as
+// $start-tablet: query( min, mobile );
+// to make the stylesheet more readable
+
 .a-card {
 	padding: 28px;
 
@@ -50,7 +61,7 @@
 
 	@media ( query( min, tablet ) ) {
 		width: 180px;
-  	height: 160px;
+		height: 160px;
 		grid-column: 2 / 2;
 		order: 1;
 	}
@@ -65,7 +76,8 @@
 	font-size: 30px;
 	font-weight: $bold;
 	@media ( query( min, tablet )) {
-		display: inline-flex;
+		display: inline-block;
+		margin-right: $nudge;
 	}
 }
 
@@ -73,26 +85,6 @@
 	@include social-button( $c-grey-medium );
 	> .text {
 		font-size: 12px;
-		padding-left: 5px;
-		padding-right: 10px;
-	}
-}
-
-.a-card__stories-btn {
-	display: flex;
-	align-items: center;
-	margin-bottom: 20px;
-
-	> .text {
-	color: $c-link;
-		font-size: 14px;
-		padding-right: $nudge;
-}
-
-	> .icon {
-		fill: $c-link;
-	}
-}
 		padding-left: $nudge;
 		padding-right: 10px;
 	}
