Adjust grid to have a max-width on mobile

--- a/assets/src/css/components/_author-card.scss
+++ b/assets/src/css/components/_author-card.scss
@@ -10,9 +10,11 @@
 
 .a-card {
 	padding: 28px;
-
-	@media ( $start-tablet ) {
 		display: grid;
+	grid-template-columns: minmax(min-content, 500px);
+	place-content: center;
+
+	@media ( $start-tablet ) { // Introduces grid
 		grid-template-columns: minmax(300px, 500px) 180px;
 		grid-template-rows: auto auto;
 
