Move collapsed styles to a js-collapsed helper class

--- a/assets/src/css/components/_author-card.scss
+++ b/assets/src/css/components/_author-card.scss
@@ -59,19 +59,29 @@
 
 .a-card__desc {
 	@media ( $mobile-only ) {
-		max-height: 100px;
-		overflow: hidden;
+	}
+}
+
+.js-collapsed {
+	@media ( $mobile-only ) {
 		position: relative;
 		display: block;
+		max-height: 100px;
+		overflow: hidden;
 
-		&:after {
+		&::after {
 			content: '';
 			height: 100%;
 			width: 100%;
 			position: absolute;
 			bottom: 0;
 			left: 0;
-			background-image: linear-gradient( rgba($c-white, 0), $c-white );
+			background-image: linear-gradient( rgba( $c-white, 0 ), $c-white );
+		}
+
+		& + .a-card__expand-btn > .icon {
+			transform: scale( 1.2 );
+			margin-top: $nudge;
 		}
 	}
 }
